// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`process processIfHasAccess keeps member nodes if user has access 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "alt": null,
              "title": null,
              "type": "image",
              "url": "",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "P",
                },
              ],
              "type": "emphasis",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": {},
      "identifier": "FIGURE",
      "type": "zone",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "If 2-1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "If 2-2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "If 4-1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 6",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "If 7-1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "If 7-2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 8",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": {},
      "identifier": "CENTER",
      "type": "zone",
    },
  ],
  "type": "root",
}
`;

exports[`process processIfHasAccess keeps non-member nodes if user has no access 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "alt": null,
              "title": null,
              "type": "image",
              "url": "",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "P",
                },
              ],
              "type": "emphasis",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": {},
      "identifier": "FIGURE",
      "type": "zone",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 2-1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 2-2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 3-1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 3-2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 3-3",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 4-1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 4-2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 5-1",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Else 5-2",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 6",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Paragraph 8",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": {},
      "identifier": "CENTER",
      "type": "zone",
    },
  ],
  "type": "root",
}
`;
